--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-
 .idea/*
 node_modules/*
-
-.idea/misc.xml
-
-.idea/modules.xml
-
-.idea/modules.xml
-
-.idea/scopes/scope_settings.xml
-
-.idea/vcs.xml
-
-.idea/vcs.xml
+express.js
