#1 websocket interface for devices that suport that...

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "greenseer",
     "version": "0.1.0",
     "devDependencies": {
-        "socket.io": "0.9.16",
+        "websocket": "1.0.8",
         "express": "3.3.1"
     }
 }
